--- a/sample/res/layout/activity_main.xml
+++ b/sample/res/layout/activity_main.xml
@@ -31,6 +31,15 @@
             android:layout_height="wrap_content"
             android:drawableTop="@android:drawable/ic_menu_camera"
             android:text="Video" />
+
+        <Button
+            android:id="@+id/button_recording"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableTop="@android:drawable/ic_menu_camera"
+            android:text="Recording" />
+
+
     </LinearLayout>
 
 </FrameLayout>
