- Add samples for recoding camera with gpu image effects. - Try to work recording audio when capture camera.

--- a/sample/res/layout/activity_main.xml
+++ b/sample/res/layout/activity_main.xml
@@ -26,6 +26,13 @@
             android:text="Camera" />
 
         <Button
+            android:id="@+id/button_camera_record"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableTop="@android:drawable/ic_menu_camera"
+            android:text="Camera Record" />
+
+        <Button
             android:id="@+id/button_video"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
