--- a/sample/res/layout/activity_camera.xml
+++ b/sample/res/layout/activity_camera.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <android.opengl.GLSurfaceView
+    <jp.co.cyberagent.android.gpuimage.sample.activity.CameraRecordSurfaceView
         android:id="@+id/surfaceView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -45,5 +45,19 @@
             android:layout_height="wrap_content"
             android:src="@android:drawable/ic_menu_camera" />
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/frameRateValue_text"
+        android:textColor="@android:color/white"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/record_state"
+        android:layout_alignParentRight="true"
+        android:textColor="@android:color/white"/>
+
 
 </RelativeLayout>
